--- a/TestForIaUa/AddModelWindow.xaml
+++ b/TestForIaUa/AddModelWindow.xaml
@@ -1,25 +1,25 @@
-﻿<Window x:Class="TestForIaUa.AddModelWindow"
+﻿<Window
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:TestForIaUa"
-        mc:Ignorable="d"
-        Title="Добавление модели" Height="300" Width="300">
-    <Grid>
-        <Grid>
-            <StackPanel  Name="mainStackPanel" >
-                <Label Name="labelManuf" Content="Выберите производителя"/>
-                <ComboBox Name="ComboBoxManuf"/>
-                <Border Height="5" Background="Black"/>
-                <Label Name="labelType" Content="Выберите тип оборудования"/>
-                <ComboBox Name="ComboBoType"/>
-                <Border Height="5" Background="Black"/>
-                <Label Name="label" Content="Введите название типа оборудования"/>
-                <TextBox Name="textBoxName" Height="24" TextWrapping="Wrap" Text=""/>
-                <Border Height="5" Background="Black"/>
-                <Button Name="buttonAdd" Content="Добавить новую модель в базу данных" Click="buttonAdd_Click"/>
-            </StackPanel>
-        </Grid>
+
+        xmlns:d="http://schemas.microsoft.com/expression/blend/2008" mc:Ignorable="d" x:Class="TestForIaUa.AddModelWindow"
+
+        Title="Добавление модели"  MinHeight="10" Height="auto" Width="auto" d:DesignHeight="287" d:DesignWidth="296" >
+    <Grid  MinHeight="10" Height="auto" Width="auto">
+        <StackPanel  x:Name="mainStackPanel" MinHeight="10" Height="auto" Width="auto" >
+            <Label x:Name="labelManuf" Content="Выберите производителя" Height="25"/>
+            <ComboBox x:Name="ComboBoxManuf" DisplayMemberPath="Name"  SelectionChanged="ComboBoxManuf_SelectionChanged"/>
+            <Border Height="5" Background="Black"/>
+            <Label x:Name="labelType" Content="Выберите тип оборудования"/>
+            <ComboBox x:Name="ComboBoxType"  DisplayMemberPath="Name" />
+            <Border Height="5" Background="Black"/>
+            <Label x:Name="label" Content="Введите название типа оборудования"/>
+            <TextBox x:Name="textBoxName" Height="24" TextWrapping="Wrap" Text=""/>
+            <Border Height="5" Background="Black"/>
+            <Button x:Name="buttonAdd" Content="Добавить новую модель в базу данных" Click="buttonAdd_Click" />
+        </StackPanel>
     </Grid>
 </Window>
