--- a/TestForIaUa/MainWindow.xaml
+++ b/TestForIaUa/MainWindow.xaml
@@ -74,14 +74,26 @@
                 </Grid.RowDefinitions>
 
                 <StackPanel Grid.Row="0" Orientation="Horizontal">
-                    <Button Height="Auto" Name="filterButton" Width="auto" Margin="1" Padding="4" Click="filterButton_Click" Foreground="Black" BorderBrush="Black" Background="#0A000000">
+                    <Button Height="Auto" Name="filterTypeButton" Width="auto" MaxWidth="130" Margin="1" Padding="4" Click="filterTypeButton_Click" Foreground="Black" BorderBrush="Black" Background="#0A000000">
                         <Button.Content>
-                            <TextBlock Text="Фильтрация" TextWrapping="Wrap" TextAlignment="Center" FontSize="14" FontWeight="Normal" />
+                            <TextBlock Text="Фильтрация по типу" TextWrapping="Wrap" TextAlignment="Center" FontSize="14" FontWeight="Normal" />
+                        </Button.Content>
+                    </Button>
+
+                    <Button Height="Auto" Name="filterManufacturerButton" Width="auto" MaxWidth="130" Margin="1" Padding="4" Click="filterManufacturerButton_Click" Foreground="Black" BorderBrush="Black" Background="#0A000000">
+                        <Button.Content>
+                            <TextBlock Text="Фильтрация по производителю" TextWrapping="Wrap" TextAlignment="Center" FontSize="14" FontWeight="Normal" />
+                        </Button.Content>
+                    </Button>
+
+                    <Button Height="Auto" Name="filterNoneButton" Width="auto" MaxWidth="130" Margin="1" Padding="4" Click="filterNoneButton_Click" Foreground="Black" BorderBrush="Black" Background="#0A000000">
+                        <Button.Content>
+                            <TextBlock Text="Сброс фильтра" TextWrapping="Wrap" TextAlignment="Center" FontSize="14" FontWeight="Normal" />
                         </Button.Content>
                     </Button>
                 </StackPanel>
 
-                <DataGrid  Grid.Row="1" SelectionMode ="Extended"  AutoGenerateColumns="False" Name="mainDataGrid" IsReadOnly="True">
+                <DataGrid  Grid.Row="1" SelectionMode ="Extended"  AutoGenerateColumns="False" Name="mainDataGrid" IsReadOnly="True" KeyUp="mainDataGrid_KeyUp">
                     <DataGrid.Columns>
                         <DataGridTextColumn Binding="{Binding id}" Header="Номер" Width="auto"/>
                         <DataGridTextColumn Binding="{Binding TypeName}" Header="Тип оборудования" Width="*"/>
