--- a/TestForIaUa/MainWindow.xaml
+++ b/TestForIaUa/MainWindow.xaml
@@ -5,14 +5,14 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:TestForIaUa"
         mc:Ignorable="d"
-        Title="Учёт офисного оборудования" Height="446.875" Width="596.875">
+        Title="Учёт офисного оборудования" Height="446.875" Width="677.875">
 
     <StackPanel  Name="stackPanel1" Orientation="Vertical" >
         <Menu Height="23" Name="menu1" HorizontalAlignment="Stretch">
             <MenuItem Header="Файл" Name="File" VerticalContentAlignment="Center">
-                <MenuItem Header="Новая БД"  Name="NewDataBase" Click="NewDataBase_Click" />
+                <MenuItem Header="Новая БД"  Name="NewDataBase"  />
                 <Separator />
-                <MenuItem Header="Открыть БД" Name="OpenDataBase" Click="OpenDataBase_Click"></MenuItem>
+                <MenuItem Header="Открыть БД" Name="OpenDataBase" ></MenuItem>
             </MenuItem>
 
             <MenuItem Header="Помощь" Name="about">
@@ -73,19 +73,15 @@
                     <RowDefinition Height="*" />
                 </Grid.RowDefinitions>
 
-                <StackPanel Grid.Row="0" Orientation="Horizontal">
-                    <Button Height="Auto" Name="filterTypeButton" Width="auto" MaxWidth="130" Margin="1" Padding="4" Click="filterTypeButton_Click" Foreground="Black" BorderBrush="Black" Background="#0A000000">
-                        <Button.Content>
-                            <TextBlock Text="Фильтрация по типу" TextWrapping="Wrap" TextAlignment="Center" FontSize="14" FontWeight="Normal" />
-                        </Button.Content>
-                    </Button>
-
-                    <Button Height="Auto" Name="filterManufacturerButton" Width="auto" MaxWidth="130" Margin="1" Padding="4" Click="filterManufacturerButton_Click" Foreground="Black" BorderBrush="Black" Background="#0A000000">
-                        <Button.Content>
-                            <TextBlock Text="Фильтрация по производителю" TextWrapping="Wrap" TextAlignment="Center" FontSize="14" FontWeight="Normal" />
-                        </Button.Content>
-                    </Button>
-
+                <StackPanel Grid.Row="0" Orientation="Horizontal" Width="auto">
+                    <StackPanel  Orientation="Vertical" Width="auto">
+                        <Label x:Name="labeltype" Content="Фильтр по типу"/>
+                        <ComboBox x:Name="ComboBoxType"  DisplayMemberPath="Name" MinWidth="100" SelectionChanged="ComboBoxType_SelectionChanged"/>
+                    </StackPanel>
+                    <StackPanel  Orientation="Vertical" Width="auto">
+                        <Label x:Name="labelManuf" Content="Фильтр по производителю"/>
+                        <ComboBox x:Name="ComboBoxManuf"  DisplayMemberPath="Name" MinWidth="100" SelectionChanged="ComboBoxManuf_SelectionChanged"/>
+                    </StackPanel>
                     <Button Height="Auto" Name="filterNoneButton" Width="auto" MaxWidth="130" Margin="1" Padding="4" Click="filterNoneButton_Click" Foreground="Black" BorderBrush="Black" Background="#0A000000">
                         <Button.Content>
                             <TextBlock Text="Сброс фильтра" TextWrapping="Wrap" TextAlignment="Center" FontSize="14" FontWeight="Normal" />
@@ -93,7 +89,7 @@
                     </Button>
                 </StackPanel>
 
-                <DataGrid  Grid.Row="1" SelectionMode ="Extended"  AutoGenerateColumns="False" Name="mainDataGrid" IsReadOnly="True" KeyUp="mainDataGrid_KeyUp">
+                <DataGrid  Grid.Row="1" SelectionMode ="Extended"  AutoGenerateColumns="False" Name="mainDataGrid" IsReadOnly="True" KeyUp="mainDataGrid_KeyUp" MouseDoubleClick="mainDataGrid_MouseDoubleClick">
                     <DataGrid.Columns>
                         <DataGridTextColumn Binding="{Binding id}" Header="Номер" Width="auto"/>
                         <DataGridTextColumn Binding="{Binding TypeName}" Header="Тип оборудования" Width="*"/>
